--- a/tutorial/deepcolor_tutorial.ipynb
+++ b/tutorial/deepcolor_tutorial.ipynb
@@ -10,15 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys \n",
-    "sys.path.append('/home/tiisaishima/packages/deepcolor/src')\n",
-    "sys.path.append('/home/tiisaishima/packages/deepcolor')\n",
-    "import os\n",
-    "os.chdir('/home/tiisaishima/packages/deepcolor')\n"
+    "! pip install deepcolor"
    ]
   },
   {
@@ -26,7 +22,7 @@
    "metadata": {},
    "source": [
     "# Preprocessing data\n",
-    "Although deepCOLOR estimate the spatial distribution of single cells based on raw count matrix of single cell and spatail transcriptomes, it requires normalized expression for downstream analysis such as DEG detection. Also, we exclude lowly expressed cells and spots from folowing analysis.\n"
+    "Although deepCOLOR estimate the spatial distribution of single cells based on raw count matrix of single cell and spatail transcriptomes, it requires normalized expression for downstream analysis such as DEG detection. Also, we exclude lowly expressed cells and spots from folowing analysis. In this tutorial, we use pre-processed dataset of squamous cartinoma from [Ji et al. 2020](https://www.sciencedirect.com/science/article/pii/S0092867420306723?via%3Dihub).\n"
    ]
   },
   {
@@ -35,6 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! mkdir -p data/tutorial/\n",
+    "! wget -O data/tutorial/scc_sc.h5ad https://www.dropbox.com/s/cx2wx67cpqpu167/scc_sc.h5ad?dl=0\n",
+    "! wget -O data/tutorial/scc_sp.h5ad https://www.dropbox.com/s/as4v1yh4yrezrc6/scc_sp.h5ad?dl=0\n",
     "import torch\n",
     "import scanpy as sc\n",
     "import numpy as np\n",
@@ -205,10 +204,7 @@
     "import deepcolor\n",
     "import importlib\n",
     "importlib.reload(deepcolor)\n",
-    "sc_adata, sp_adata = deepcolor.estimate_spatial_distribution(sc_adata, sp_adata, param_save_path='data/tutorial/opt_params.pt', first_epoch=500, second_epoch=500)\n",
-    "# visualize imputation\n",
-    "\n",
-    "# visualize celltype distribution"
+    "sc_adata, sp_adata = deepcolor.estimate_spatial_distribution(sc_adata, sp_adata, param_save_path='data/tutorial/opt_params.pt', first_epoch=500, second_epoch=500)\n"
    ]
   },
   {
@@ -319,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using ligand-target regulatory potentianl derived from NicheNet, we can estimate the ligand activity between spatially proximal cells."
+    "Using ligand-target regulatory potentianl derived from NicheNet ([Browaeys et al. 2020](https://www.nature.com/articles/s41592-019-0667-5)), we can estimate the ligand activity between spatially proximal cells."
    ]
   },
   {
@@ -1614,6 +1610,7 @@
     }
    ],
    "source": [
+    "! wget -O data/tutorial/ligand_target_df.csv https://www.dropbox.com/s/2z7ogbks4504iya/ligand_target_df.csv?dl=0\n",
     "import pandas as pd\n",
     "importlib.reload(deepcolor)\n",
     "lt_df = pd.read_csv('data/tutorial/ligand_target_df.csv', index_col=0)\n",
