update tutorial and dependencies

--- a/tutorial/deepcolor_tutorial.ipynb
+++ b/tutorial/deepcolor_tutorial.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install deepcolor"
+    "! pip install deepcolor imgaug==0.2.5"
    ]
   },
   {
@@ -1677,15 +1677,6 @@
     "sc_adata.obs.loc[dual_adata.obs.cell2_obsname, 'coloc_cluster'] = dual_adata.obs.leiden.values\n",
     "pair_adata = sc_adata[sc_adata.obs['coloc_cluster'] != 'None']\n",
     "sc.pl.umap(pair_adata, color=['level1_celltype', 'coloc_cluster'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_adata.write_h5ad('data/tutorial/processed_scc_sc.h5ad')"
    ]
   }
  ],
